syntax = "proto3";
option java_package = "org.example.grpc";
option java_multiple_files = true;

message HelloRequest {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
}

message HelloResponse {
  string greeting = 1;
  string email = 2;
}

service HelloService {
  rpc hello(HelloRequest) returns (HelloResponse);
}